--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   </head>
   <body>
+  	{{"Hello world!"}}
   </body>
 </html>
