--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="MyAngularApp">
   <head>
   	<title>Angular</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="controller.js"></script>
   </head>
-  <body>
-  	{{"Hello world!"}}
+  <body ng-controller="MyController">
+  	{{hello}}
   </body>
 </html>
